# SonoForge

./: .cursorrules  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CHANGELOG_SESSION.md  DICOM_VTI_tag_fix.md  DICOM_parsing.md  README.md  README_RU.md  ROADMAP.md  Sprint3.1.md  Sprint4.md  Sprint5.md  build_deb.sh  dicom_client.md  errors_003.txt  full_log_24.06.26.md  installer_stub.py  launcher.py  manifest.json  pyproject.toml  rag-code-mcp.yaml  run_constructor.py  sonoforge-standalone.spec  sonoforge.spec  test_annotation_chain.py  test_py  Выбор инструментов для аналитики.md  Общий план.md  Этап 1.md  Этап2.md  Этап3.md
.cursor/rules/: changelog.mdc  context7.mdc  lean-ctx.mdc  mcp-workflow.mdc  ripgrep.mdc  token-economy.mdc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  coverage.yml  dependency-review.yml  release-drafter.yml  release.yml
bench/: README.md
bench/la/reports/: la_baseline_20260708.csv  la_baseline_roi_20260708.csv
bench/reports/: lv_baseline_20260708.csv  lv_baseline_lvannulus_20260708.csv  lv_baseline_no_excludes_20260709.csv  lv_baseline_norm_20260708.csv  lv_temporal_smoothing_20260709.csv  lv_with_reject_gate_20260709.csv
docs/: README.md  dicom_parcer_advanced.md
docs/bench/: baseline windows.md  baseline.md  compare.md
docs/superpowers/plans/: 2026-06-11-dicom-performance.md  2026-06-11-display-ux.md  2026-06-11-simpson-open-arc.md  2026-06-12-simpson-dual-workflow.md  2026-06-13-mbs-advanced.md  2026-06-13-preview-thumbnail-priority.md  2026-06-13-rbf-contour-deform.md  2026-06-14-lv-lame-template.md  2026-06-19-onnx-lv-auto-segment.md  2026-06-23-dicomweb-orthanc.md  2026-06-27-ste-clinical-parity.md  2026-06-29-dicom-mp4-lazy-loading.md  2026-06-29-dicom-scroll-performance-p1.md  2026-06-29-dicom-scroll-performance.md  2026-06-29-playback-prefetch.md  2026-06-30-customize-layout.md  2026-06-30-ui-enhancement.md  2026-07-02-dimse-stow-rs-implementation.md  2026-07-09-ste-quality-pipeline.md  2026-07-13-reference-constructor-plan.md
docs/superpowers/specs/: 2026-06-11-dicom-performance-design.md  2026-06-11-display-ux-design.md  2026-06-12-mbs-lite-design.md  2026-06-12-simpson-dual-workflow-design.md  2026-06-13-mbs-advanced-design.md  2026-06-13-preview-thumbnail-priority-design.md  2026-06-13-rbf-contour-deform-design.md  2026-06-14-echopac-worksheet-design.md  2026-06-14-lv-lame-template-design.md  2026-06-19-measurement-workflow-design.md  2026-06-19-onnx-lv-auto-segment-design.md  2026-06-22-rv-fac-design.md  2026-06-23-dicomweb-orthanc-design.md  2026-06-25-nelafo-speckle-tracking-design.md  2026-06-27-ste-clinical-parity-design.md  2026-06-29-dicom-scroll-performance-design.md  2026-06-29-playback-prefetch-design.md  2026-06-30-customize-layout-spec.md  2026-07-04-dimse-phase2-design.md  2026-07-04-micro-ux-design.md  2026-07-05-lv-auto-onnx-quality-design.md  2026-07-06-lv-auto-commercial-parity-design.md  2026-07-08-lv-mv-bench-v21-design.md  2026-07-13-reference-constructor-design.md  (+1 more)
gold/: README.md
models/: .gitignore  README.md  model_manifest.json
plans/: customize-layout.md
scripts/: README.md  calibrate_echonet_norm.py  create_installer.py  diagnose_cine_segment.py  diagnose_dicom_segment.py  echo-personal-tool.desktop  export_echonet_seg_to_onnx.py  finetune_la_seg.py  finetune_lv_seg.py  generate_manifest_from_gold.py  repair_gold_collisions.py  run_la_auto_bench.py  run_lv_auto_bench.py  run_tests.sh  setup.bat  sonoforge.desktop  uninstall.bat
src/echo_personal_tool/: README.md  __init__.py  __main__.py  main.py
tests/: README.md  conftest.py  test_annotation_chain.py  test_dicom_tag_dictionary.py  test_smoke.py  test_upload_flow.py
tests/bench/: test_decode_bench.py  test_memory_bench.py  test_network_bench.py  test_pipeline_bench.py  test_playback_bench.py  test_playback_fps_bench.py  test_playback_real_dicom_bench.py  test_rendering_bench.py  test_scroll_bench.py  test_viewer_perf.py
tests/benchmark/: test_core.py
tests/fixtures/: generate_synthetic_dicom.py  generate_synthetic_media.py  reference_manifest.json
tests/integration/: conftest.py  test_dicom_reader.py  test_orthanc_live.py
tests/interactive/: test_cine_segment_diagnostics.py
tests/unit/: test_active_contour_refine.py  test_aha_segments.py  test_app_controller_dicom_cache.py  test_app_controller_thumbnail_priority.py  test_ase_reference_dialog.py  test_ase_reference_norms.py  test_ase_reference_parser.py  test_auto_depth_calibration.py  test_auto_segment_controller.py  test_bench_metrics.py  test_bench_runner.py  test_bernoulli.py  test_body_surface.py  test_bundled_fonts.py  test_caliper_label_layout.py  test_caliper_node_drag.py  test_chamber_simpson.py  test_constructor_model.py  test_constructor_storage.py  test_contour.py  test_contour_geometry.py  test_contour_utils.py  test_decode_workers_lazy.py  test_dicom_decode_worker.py  test_dicom_metadata_mapper.py  test_dicom_query_service.py  test_dicom_retrieve_service.py  test_dicom_session.py  test_dicom_upload_utils.py  test_dicom_upload_worker.py  test_dimse_client.py  test_dimse_find_mapper.py  test_doppler_controller.py  test_doppler_grid_detector.py  test_doppler_metrics.py  test_doppler_models.py  test_doppler_widget.py  test_embedded_storage_scp.py  test_fake_dicom_web_client.py  test_fake_dimse_client.py  (+114 more)
(+201 files in other folders)
