[project]
name = "echo-personal-tool"
version = "0.1.0"
description = "Personal desktop echocardiography analysis tool"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pyside6>=6.6",
    "pyqtgraph>=0.13",
    "pydicom>=2.4",
    "pylibjpeg>=2.0",
    "pylibjpeg-openjpeg>=2.0",
    "pylibjpeg-libjpeg>=2.0",
    "numpy>=1.26,<2.0",
    "scipy>=1.11",
    "opencv-python-headless>=4.8",
]

[project.optional-dependencies]
phase2 = [
    "onnxruntime>=1.17",
    "reportlab>=4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "pytest-qt>=4.4",
    "ruff>=0.4",
    "black>=24.0",
]

[project.scripts]
echo-personal-tool = "echo_personal_tool.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/echo_personal_tool"]

[tool.hatch.build.targets.sdist]
include = ["src/echo_personal_tool", "README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring real DICOM files on disk",
]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]
