[project]
name = "echo-personal-tool"
version = "0.1.0"
description = "Personal desktop echocardiography analysis tool"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pyside6>=6.6",
    "pyqtgraph>=0.13",
    "pydicom>=2.4",
    "pylibjpeg>=2.0",
    "pylibjpeg-openjpeg>=2.0",
    "pylibjpeg-libjpeg>=2.0",
    "numpy>=1.26,<2.0",
    "scipy>=1.11",
    "opencv-python-headless>=4.8",
    "httpx>=0.27",
    "psutil>=5.9",
    "pymupdf>=1.24",
    "pynetdicom>=2.0",
]

[project.optional-dependencies]
phase2 = [
    "onnxruntime>=1.17",
    "reportlab>=4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "pytest-qt>=4.4",
    "ruff>=0.4",
    "black>=24.0",
]

[project.scripts]
echo-personal-tool = "echo_personal_tool.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/echo_personal_tool"]

[tool.hatch.build.targets.wheel.force-include]
"src/echo_personal_tool/resources/fonts" = "echo_personal_tool/resources/fonts"

[tool.hatch.build.targets.sdist]
include = ["src/echo_personal_tool", "README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring real DICOM files on disk or live Orthanc (ECHO_ORTHANC=1)",
    "interactive: manual cine segmentation diagnostics (MP4 without DICOM tags)",
]
addopts = "-q -m 'not interactive'"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.pytest-benchmark]
autosave = true
min_rounds = 5
calibration_precision = 100
save = "bench"
sort = "mean"
compare = "mean"
name = "ECHO2026"
group_by = "group"
timer = "time.perf_counter"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]
