[project]
name = "sonoforge"
dynamic = ["version"]
description = "Personal desktop echocardiography analysis tool"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pyside6>=6.6",
    "pyqtgraph>=0.13",
    "pydicom>=2.4",
    "pylibjpeg>=2.0",
    "pylibjpeg-openjpeg>=2.0",
    "pylibjpeg-libjpeg>=2.0",
    "numpy>=1.26,<2.0",
    "scipy>=1.11",
    "opencv-python-headless>=4.8",
    "httpx>=0.27",
    "psutil>=5.9",
    "pymupdf>=1.24",
    "pynetdicom>=2.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "onnxruntime>=1.17",
    "reportlab>=4.0",
    "openpyxl>=3.1",
    "keyring>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "pytest-qt>=4.4",
    "ruff>=0.4",
]

[project.scripts]
sonoforge = "echo_personal_tool.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/echo_personal_tool/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/echo_personal_tool"]

[tool.hatch.build.targets.wheel.force-include]
"src/echo_personal_tool/resources/fonts" = "echo_personal_tool/resources/fonts"
"src/echo_personal_tool/resources/references" = "echo_personal_tool/resources/references"

[tool.hatch.build.targets.sdist]
include = ["src/echo_personal_tool", "README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring real DICOM files on disk or live Orthanc (ECHO_ORTHANC=1)",
    "interactive: manual cine segmentation diagnostics (MP4 without DICOM tags)",
    "gui: tests requiring PySide6 QApplication (CI: skip with -m 'not gui')",
]
addopts = "-q -m 'not interactive'"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.pytest-benchmark]
autosave = true
min_rounds = 5
calibration_precision = 100
save = "bench"
sort = "mean"
compare = "mean"
name = "ECHO2026"
group_by = "group"
timer = "time.perf_counter"

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["F821", "E402", "F841", "E501", "UP042", "E741"]
